--- a/roles/php/tasks/main.yaml
+++ b/roles/php/tasks/main.yaml
@@ -25,6 +25,7 @@
       - "php{{php_version}}"
       - "php{{php_version}}-fpm"
       - "php{{php_version}}-common"
+      - "php{{php_version}}-gd"
       - "php{{php_version}}-bcmath"
       - "php{{php_version}}-mbstring"
       - "php{{php_version}}-yaml"
