--- a/roles/nginx/handlers/main.yaml
+++ b/roles/nginx/handlers/main.yaml
@@ -8,5 +8,5 @@
 
 - name: get time
   set_fact:
-    cur_date: "{{ tstamp.stdout[0:10]}}"
-    cur_time: "{{ tstamp.stdout[10:]}}"
+    cur_date: "{{ cur_date }}"
+    cur_time: "{{ cur_time }}"
